fix:mobile layout broken / overflow issues with sidebar

--- a/src/assets/scss/_fachportal.scss
+++ b/src/assets/scss/_fachportal.scss
@@ -72,8 +72,9 @@ $fachportal_bright: $wlo-primary;
   transition: 0.3s;
 
   .portal-wrapper-left {
-    width: 1200px;
-    max-width: 100%;
+    width: 0;
+    flex-grow: 1;
+    max-width: 1200px;
     background: #f4f4f4;
     border-radius: 24px 24px 0 0;
   }
@@ -1532,7 +1533,7 @@ span.header-text {
       color: #313131;
       position: relative;
       overflow: hidden;
-      height: 2.6em;
+      min-height: 2.6em;
       margin: 1em 0;
     }
 
